--- a/public/admin/view/viewDelivered.html
+++ b/public/admin/view/viewDelivered.html
@@ -1,3 +1,4 @@
+<div>
 <a href="#/viewOrders">New Orders</a>
 <table class="table table-striped">
   <thead>
@@ -23,3 +24,4 @@
     </tr>
   </tbody>
 </table>
+</div>
