--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -49,3 +49,19 @@ div.piz {
 
   box-shadow:  -5px 5px 6px 0px rgb(156, 153, 153);
 }
+
+
+
+
+
+h3 {
+color: #FF0000;
+letter-spacing: .1em;
+font-family: "Poiret One", cursive;
+background-color: #BE0000;
+font-size: 3.2em;
+float: left;
+margin-top: 12px;
+padding-top: 4px;
+text-shadow: 2px 2px 2px rgba(0,0,0,.8);
+}
